# slick

./: README.md  maybe  maybe.py  pyproject.toml  request.sh  slick
scripts/: launch_server.sh
slick/: slick.py
